--- a/_modules/index.html
+++ b/_modules/index.html
@@ -139,6 +139,7 @@
 <li><a href="iceprod/server/dbmethods/node.html">iceprod.server.dbmethods.node</a></li>
 <li><a href="iceprod/server/dbmethods/queue.html">iceprod.server.dbmethods.queue</a></li>
 <li><a href="iceprod/server/dbmethods/rpc.html">iceprod.server.dbmethods.rpc</a></li>
+<li><a href="iceprod/server/dbmethods/web.html">iceprod.server.dbmethods.web</a></li>
 </ul><li><a href="iceprod/server/file_io.html">iceprod.server.file_io</a></li>
 <li><a href="iceprod/server/globus.html">iceprod.server.globus</a></li>
 <li><a href="iceprod/server/grid.html">iceprod.server.grid</a></li>
